--- a/app/src/main/res/layout/activity_maps3.xml
+++ b/app/src/main/res/layout/activity_maps3.xml
@@ -27,22 +27,25 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/logo"
+            android:id="@+id/home"
             android:layout_width="200dp"
             android:layout_height="70dp"
             android:onClick="onClick"
             app:srcCompat="@drawable/logov2" />
 
         <TextView
-            android:id="@+id/text200xp"
+            android:id="@+id/points"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner"
-            android:backgroundTint="@color/transparentWhite"
             android:gravity="center"
             android:padding="5dp"
-            android:text="200XP"
-            android:textSize="48px"></TextView>
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/style5"
+            android:textColor="@color/style5"
+            android:textSize="@dimen/style5"
+            android:text="@string/score_initial"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -54,6 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:onClick="onClick"
+            android:id="@+id/menu"
             app:srcCompat="@drawable/menu" />
     </LinearLayout>
     </LinearLayout>
@@ -118,7 +122,7 @@
             android:textColor="@color/style4"
             android:fontFamily="@font/style4"
             android:textSize="@dimen/style4"
-            ></TextView>
+            />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
@@ -132,15 +136,19 @@
 
     </LinearLayout>
 
-    <FrameLayout
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="460dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:orientation="horizontal"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:id="@+id/fragCarte">
-
-    </FrameLayout>
+        app:cornerRadius="@dimen/cornerRadius"
+        tools:context=".Map_Fragment"
+        tools:layout="@layout/activity_maps1" />
 
     <TextView
         android:layout_width="match_parent"
@@ -167,11 +175,11 @@
 
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/ananasImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:id="@+id/ananas_black"
             android:onClick="onClick"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/ananas_black">
@@ -179,35 +187,35 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/avocatImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onClick"
-            android:id="@+id/avocat_black"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/avocat_black">
 
         </ImageView>
 
         <ImageView
+            android:id="@+id/bananeImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:onClick="onClick"
-            android:id="@+id/banane_black"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/banane_black">
 
         </ImageView>
 
         <ImageView
+            android:id="@+id/pastequeImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:id="@+id/pasteque_black"
             android:onClick="onClick"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/pasteque_black">
@@ -215,11 +223,11 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/mangueImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:id="@+id/mangue_black"
             android:onClick="onClick"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/mangue_black">
@@ -227,12 +235,11 @@
         </ImageView>
 
         <ImageView
+            android:id="@+id/pommesImage"
             android:layout_width="0dp"
             android:layout_height="@dimen/HeightCard"
             android:layout_margin="2dp"
             android:layout_weight="1"
-            android:id="@+id/pomme_black"
-
             android:onClick="onClick"
             android:background="@drawable/rounded_corner"
             app:srcCompat="@drawable/pommes_black">
